add style for captions

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -9,3 +9,10 @@
 .kk {
     color: #ffe600;
   }
+
+figure {
+  text-align: center;
+  font-style: italic;
+  font-size: smaller;
+  text-indent: 0;
+}
