--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -9,3 +9,14 @@
 .kk {
     color: #ffe600;
   }
+
+figure {
+  text-align: center;
+  font-style: italic;
+  font-size: smaller;
+  text-indent: 0;
+}
+
+code {
+  white-space : pre-wrap !important;
+}
